# data_analysis_Agent_tds

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  huggingface.yaml  pyproject.toml  requirements.txt  start.sh
backend/: agent.py  llm_agent.py  main.py  schemas.py  utils.py
backend/prompts/: templates.yaml
backend/toolkits/: analyze.py  duckdb_runner.py  fetch.py  file_handler.py  sql_generator.py  summarize.py  visualize.py
frontend/: app.js  index.html
test/: ans6.py  q1.txt  q2.txt  q3.txt  q4.txt  q5.txt
test/with_csv/: ans1.py  ans2.py  q1.csv  q1.txt  q2.txt  q3.csv  q3.txt
test/with_excel/: ans1.py  q1.txt
