[project]
name = "project-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "duckdb>=1.3.2",
    "fastapi>=0.116.1",
    "google-genai>=1.28.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "pypdf2>=3.0.1",
    "python-decouple>=3.8",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
    "uvicorn>=0.35.0",
    "dotenv>=0.9.9",
    "lxml>=6.0.0",
    "tabulate>=0.9.0",
    "scipy>=1.16.1",
    "altair>=5.5.0",
    "scikit-learn>=1.7.1",
    "altair-viewer>=0.4.0",
    "altair-saver>=0.5.0",
    "pdfplumber>=0.11.7",
    "openpyxl>=3.1.5",
    "statsmodels>=0.14.5",
    "openai>=1.99.6",
]
